# can4disco

./: .gdbinit  .gitignore  Makefile  README  README.rst  can4disco.cabal  default.conf  stack.yaml
src/C4D/: Platforms.hs  SLCAN.hs  Types.hs
src/C4D/Tests/: CAN2UART.hs  CANLoop.hs  CANSendRecv.hs  SLCAN.hs  SLCANLoopback.hs
test/: CAN2UART.hs  CANLoopTest.hs  CANSendRecv.hs  SLCAN.hs  SLCANLoopback.hs  SLCANPosix.hs
util/: setup
