cabal-version:       2.2
name:                can4disco
version:             0.1.0.0
synopsis:            can4disco firmware
description:         SLCAN bridge implementation and CAN Bus utilities
license:             BSD-3-Clause
author:              Sorki
maintainer:          srk@48.io
copyright:           2020 Sorki
category:            Embedded
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     C4D.Platforms
                       C4D.SLCAN
                       C4D.Types
                       C4D.Tests.CANSendRecv
                       C4D.Tests.CANLoop
                       C4D.Tests.CAN2UART
                       C4D.Tests.SLCAN
                       C4D.Tests.SLCANLoopback

  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32 >= 0.9,
                       ivory-bsp-stm32,
                       ivory-tower-helloworld,
                       ivory-tower-base

  default-language:    Haskell2010
  ghc-options:         -Wall

executable cansendrecv-test-gen
  main-is:             CANSendRecv.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       can4disco
  ghc-options:          -Wall

executable canloop-test-gen
  main-is:             CANLoopTest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       can4disco
  ghc-options:          -Wall

executable can2uart-test-gen
  main-is:             CAN2UART.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       can4disco
  ghc-options:          -Wall

executable slcan-test-gen
  main-is:             SLCAN.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       can4disco
  ghc-options:          -Wall

executable slcan-loopback-test-gen
  main-is:             SLCANLoopback.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       can4disco
  ghc-options:          -Wall

executable slcan-posix-loopback-test-gen
  main-is:             SLCANPosix.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-hal,
                       ivory-tower-base,
                       ivory-tower-posix,
                       can4disco
  ghc-options:          -Wall
